--- a/styles/index.css
+++ b/styles/index.css
@@ -8,7 +8,19 @@
     background-color: aquamarine;
     padding: 30px;
     border-radius: 10px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    box-shadow: 0 4px 8px black;
     text-align: center;
     width: 300px;
+}
+.card img{
+    border-radius: 50%;
+    width: 150px;
+    height: 150px;
+}
+.card h2{
+    margin: 15px 0 5px;
+}
+
+.card p{
+    color: #555;
 }
